new/components/tls/patches/nginx.Service.yaml
apiVersion: v1 # for versions before 1.9.0 use apps/v1beta2
kind: Service
metadata:
  name: nginx
  labels:
    deploy: nginx
spec:
  ports:
  - name: https
    nodePort: 30443
    port: 443
    targetPort: 4443
  selector:
    app: nginx
  type: NodePort
